Fix: Score count only visible when game has started

--- a/style.css
+++ b/style.css
@@ -112,7 +112,6 @@ left: 60px;
   padding: 10px; 
   background-color: white;
   border-radius: 20px;
-  display: flex;
 }
 
 /* Fortschrittsleiste */
